edits in docker

--- a/src/nginx/etc/conf.d/default.conf
+++ b/src/nginx/etc/conf.d/default.conf
@@ -2,10 +2,12 @@
 server {
  
   server_name localhost;
-   listen 80;
-   root /usr/share/nginx/html;
+  listen 80;
+  root /usr/share/nginx/html;
+  pid /tmp/nginx.pid;
 
-    index index.html index.html;
+  index index.html index.html;
+  client_body_temp_path /tmp/nginx/client_temp
 
 
    location / {
