--- a/src/nginx/etc/conf.d/default.conf
+++ b/src/nginx/etc/conf.d/default.conf
@@ -1,21 +1,18 @@
+
 server {
-    listen 0.0.0.0:80;
-    listen [::]:80;
-    default_type application/octet-stream;
+ 
+  server_name https://f1-tools3.apps.eu410.prod.nextcle.com;
+  listen 80;
+  root /usr/share/nginx/html;
+  pid /tmp/nginx.pid;
 
-    gzip                    on;
-    gzip_comp_level         6;
-    gzip_vary               on;
-    gzip_min_length         1000;
-    gzip_proxied            any;
-    gzip_types              text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-    gzip_buffers            16 8k;
-    gunzip on;
-    client_max_body_size    256M;
+  index index.html index.html;
+  client_body_temp_path /tmp/nginx/client_temp
 
-    root /usr/share/nginx/html;
 
-    location / {
-        try_files $uri $uri/ /index.html =404;
+   location / {
+
+        try_files $uri $uri/ /index.html;
+
     }
 }
