--- a/src/nginx/etc/conf.d/default.conf
+++ b/src/nginx/etc/conf.d/default.conf
@@ -1,7 +1,7 @@
 
 server {
  
-  server_name https://f1-tools3.apps.eu410.prod.nextcle.com;
+  server_name https://nodejs-app-angular-examples.apps.eu410.prod.nextcle.com;
   listen 80;
   root /usr/share/nginx/html;
   pid /tmp/nginx.pid;
