--- a/src/nginx/etc/conf.d/default.conf
+++ b/src/nginx/etc/conf.d/default.conf
@@ -11,11 +11,11 @@ fastcgi_temp_path     /tmp/fastcgi_temp;
 uwsgi_temp_path       /tmp/uwsgi_temp;
 scgi_temp_path        /tmp/scgi_temp;
 server {
-listen 8080;
+listen 80;
 charset utf-8;
 sendfile on;
-server_name _;
-index index.html;
+server_name https://nodejs-app-angular-examples.apps.eu410.prod.nextcle.com;
+index index.html index.html;
 error_log  /tmp/error.log;
 access_log /tmp/access.log;
 location / {
