--- a/src/nginx/etc/conf.d/default.conf
+++ b/src/nginx/etc/conf.d/default.conf
@@ -14,7 +14,7 @@ server {
 listen 80;
 charset utf-8;
 sendfile on;
-server_name https://nodejs-app-angular-examples.apps.eu410.prod.nextcle.com;
+server_name 172.30.173.234;
 index index.html index.html;
 error_log  /tmp/error.log;
 access_log /tmp/access.log;
