--- a/src/nginx/etc/conf.d/default.conf
+++ b/src/nginx/etc/conf.d/default.conf
@@ -26,6 +26,7 @@ add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Mo
 add_header 'Access-Control-Max-Age' 1728000;
 add_header 'Content-Type' 'text/plain; charset=utf-8';
 add_header 'Content-Length' 0;
+try_files $uri /index.html;
 return 204;
 }
 if ($request_method = 'GET') {
