--- a/src/nginx/etc/conf.d/default.conf
+++ b/src/nginx/etc/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  localhost;
+    server_name  https://nodejs-app2-angular-examples.apps.eu410.prod.nextcle.com;
 
     root   /usr/share/nginx/html;
     index  index.html index.htm;
