--- a/src/nginx/etc/conf.d/default.conf
+++ b/src/nginx/etc/conf.d/default.conf
@@ -1,12 +1,16 @@
-server {
-    listen       80;
-    server_name  https://nodejs-app2-angular-examples.apps.eu410.prod.nextcle.com;
 
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
+ http{
+    server {
+        listen 80;
+    
+        server_name  https://nodejs-app2-angular-examples.apps.eu410.prod.nextcle.com;
 
-    location / {
-        try_files $uri $uri/ /index.html;
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
+
     }
-
 }
